app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-algebraic-type/check/patmat.check
testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-algebraic-type/src/patmat.cal:7:22: error: case may not be exhaustive.
It would fail on patterns: A, B(_)
                case t of
                     ^ 